# flask_CI

./: Dockerfile  Dockerfile.dev  constraints.txt  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/page_tracker/: app.py
test/e2e/: test_app_redis_http.py
test/integration/: test_app_redis.py
test/unit/: test_app.py
web/: Dockerfile  constraints.txt  pyproject.toml
web/test/integration/: test_app_redis.py
